--- a/Golden/index.html
+++ b/Golden/index.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <h1>Logo</h1>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li class="active"><a href="#">Home</a></li>
       <li><a href="#">Servizi</a></li>
       <li><a href="#">Contatti</a></li>
     </ul>
