--- a/Golden/index.html
+++ b/Golden/index.html
@@ -108,8 +108,21 @@
           <td data-label="Registrato">2024-01-10</td>
           <td data-label="Status">Attivo</td>
           <td data-label="Azioni">
-            <button class="btn-table">Modifica</button>
-            <button class="btn-table">Elimina</button>
+            <!-- Pulsanti con icone (esempio: Modifica, Elimina, Info) -->
+<div style="display: flex; gap: 12px; flex-wrap: wrap; margin: 20px 0;">
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/edit.svg" alt="Modifica" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Modifica
+  </button>
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/trash.svg" alt="Elimina" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Elimina
+  </button>
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/info-circle.svg" alt="Info" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Info
+  </button>
+</div>
           </td>
         </tr>
         <tr>
@@ -124,8 +137,18 @@
           <td data-label="Registrato">2024-02-15</td>
           <td data-label="Status">Attivo</td>
           <td data-label="Azioni">
-            <button class="btn-table">Modifica</button>
-            <button class="btn-table">Elimina</button>
+            <!-- Pulsanti con icone (esempio: Modifica, Elimina, Info) -->
+<div style="display: flex; gap: 12px; flex-wrap: wrap; margin: 20px 0;">
+  <button class="btn-table btn-icon">
+    <img src="Golden/icons8-il-canale-meteo-16.png">
+  </button>
+  <button class="btn-table btn-icon">
+    <img src="Golden/icons8-il-canale-meteo-16.png">
+  </button>
+  <button class="btn-icon">
+    <img src="Golden/icons8-il-canale-meteo-16.png">
+  </button>
+</div>
           </td>
         </tr>
         <tr>
@@ -140,8 +163,21 @@
           <td data-label="Registrato">2024-03-01</td>
           <td data-label="Status">Sospeso</td>
           <td data-label="Azioni">
-            <button class="btn-table">Modifica</button>
-            <button class="btn-table">Elimina</button>
+            <!-- Pulsanti con icone (esempio: Modifica, Elimina, Info) -->
+<div style="display: flex; gap: 12px; flex-wrap: wrap; margin: 20px 0;">
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/edit.svg" alt="Modifica" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Modifica
+  </button>
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/trash.svg" alt="Elimina" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Elimina
+  </button>
+  <button class="btn-table btn-icon">
+    <img src="https://cdn.jsdelivr.net/gh/tabler/icons/icons/info-circle.svg" alt="Info" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
+    Info
+  </button>
+</div>
           </td>
         </tr>
       </tbody>
